# tesparse

./: CMakeLists.txt  README.md
DescriptionFiles/: morrowind.xml  teslayout.dtd
tesparse/: CMakeLists.txt
tesparse-cli/: CMakeLists.txt  main.cpp
tesparse/include/tesparse/: Expression.h  ExpressionEvaluator.h  ExpressionParser.h  FileMapping.h  FourCC.h  InputSerializationStream.h  OutputSerializationStream.h  SerializationStream.h  StringConversions.h  TESFileFormatDescription.h  TESGameData.h  TESValue.h  WindowsHandle.h
tesparse/tesparse/: ExpressionEvaluator.cpp  ExpressionParser.cpp  FileMapping.cpp  FourCC.cpp  InputSerializationStream.cpp  OutputSerializationStream.cpp  SerializationStream.cpp  StringConversions.cpp  TESFileFormatDescription.cpp  TESGameData.cpp  WindowsHandle.cpp
